--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,9 @@ jobs:
     
       - name: Checkout code
         uses: actions/checkout@v2
+        with:
+         fetch-depth: 0
+         token: ${{ secrets.BOT_ACCESS_TOKEN }}
 
       - name: Setup Git
         run: |
